
    * Added "Categories" back to the 'tuxpaint.desktop' file
      ("Education," and "Art").  NOTE: You need to edit 'tuxpaint.desktop.in',
      otherwise changes will be overwritten the next time 'tuxpaint.desktop'
      is generated!
      (SourceForge Bug #1932808, via Ubuntu)

    * Makefile improvements.
      Albert Cahalan <albert@users.sf.net>

  * Documentation Improvements:
    ---------------------------
    * Mentioned that canvas size can be changed in README (so it's not
      just hidden in OPTIONS).

    * Starters section of EXTENDING documentation updated ("New" vs "Open",
      other clean-up, and now directs people to README for determining
      image sizes.)

    * Moved "Starters" from the 'Open' section to 'New', in README.

    * Other minor README improvements.  Added Table of Contents to README.

  * Bug Fixes
    ---------
    * Legacy Tux Paint images (prior to Tux Paint supporting different
      colored backgrounds) would end up with arbitrary Eraser colors.
      Forcing it to always use white, which was the only background color
      in early versions of Tux Paint.

    * Brushes with large spacing wouldn't be spaced properly when drawn
      from bottom-to-top using the line tool.  Fixed.
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Fixed bug when zooming stamps in video depth other than 32bpp.
      (Float to int casting; also removes compiler errors.)

    * getpixel/putpixel function passed to Magic tools now pays attention
      to the incoming surface, rather than always using the canvas surface,
      to determine bitdepth.  (Fixes bug where some Magic tools, e.g., Grass,
      didn't work right on video depths other than 32bpp.)

    * "Ojibwe" is the proper spelling of the language, accepting that as
      a "--lang" option, too.

* New Starters:
    -------------
    * Spirograph
    * Jigsaw
      Caroline Ford <caroline.ford.work@googlemail.com>


2008.February.25 (0.9.19)
  * New Localizations: